# DevTools

./: .gitignore  .wezterm.lua
C/core/: CMakeLists.txt  core.h
C/core/platform/: platform.c  platform.h
C/core/platform/windows/: wCore.c  wCore.h
image_tables_into_xlsx/: circuit_breaker_model_tool.py  contactor_model_tool.py  database.db  dev.ipynb  dev2.ipynb  heheh.py  image_to_pdf.py  itix.py  png_pdf_into_text.ipynb  pyproject.toml  sql_helpers.ipynb  sqlite.py
