[project]
name = "image_table_into_XLSL"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas",
    "camelot-py @ git+https://github.com/Mairooriam/camelot.git",
    "jupyter",
    "pyperclip",
    "pymupdf",  # For extracting images from PDFs
    "pytesseract",  # For OCR on images
    "pillow",  # For image processing
    "fastapi",  # For building REST APIs
    "uvicorn[standard]",  # For running the FastAPI server
    "pydantic",  # For data validation (used by FastAPI)
    "requests"
]
